wip data tables api docs

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -2220,6 +2220,7 @@ Request Body:{
         <div class="method-section">
             <div class="method-description">
                 <h3>Additional Fields (Deprecated)</h3>
+                <p>Note: this API is now superceded by the datatables API and will be removed very soon.</p>
                 <p>
                 In Mifos X, any number of "Sets" of "Additional Fields" can be configured for a Mifos X database table ("Type").
                 </p>
@@ -2387,10 +2388,10 @@ Request Body:
         </div>
     
     <!-- start of datatables api docs -->
-        <a id="additionalfields" name="additionalfields" class="old-syle-anchor">&nbsp;</a>
+        <a id="datatables" name="datatables" class="old-syle-anchor">&nbsp;</a>
         <div class="method-section">
             <div class="method-description">
-                <h3>Additional Fields (Deprecated)</h3>
+                <h3>Data Tables</h3>
                 <p>
                 In Mifos X, any number of "Sets" of "Additional Fields" can be configured for a Mifos X database table ("Type").
                 </p>
@@ -2403,9 +2404,10 @@ Request Body:
                 The additional fields resource allows you to retrieve and update any Additional Fields data that has been configured in Mifos X.
                 </p>
                 <p>
-                The Mifos X Individual Lending client application uses a JQuery plugin called stretchydata which, itself, uses this
-                additional fields resource to provide a pretty flexible additional fields User Interface (UI).
+                The Mifos X Reference APP a JQuery plugin called stretchydatatables which, itself, uses this
+                datatables resource to provide a pretty flexible additional fields/extra data User Interface (UI).
                 </p>
+                <p><a href="https://mifosforge.jira.com/wiki/display/MIFOSX/Mifos+X+-+Plugging+In+Non-Core+and+User+Defined+Data">More Documentation</a></p>
             </div>
         </div>
     
