wip audit api docs

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -197,6 +197,7 @@ function getBaseURL(docURL)
                         <tr><td>offices/template</td><td><a href="#offices_template">Retrieve Office Details Template</a></td></tr>
                         <tr class="alt"><td>loanproducts/template</td><td><a href="#loanproducts_template">Retrieve Loan Product Details Template</a></td></tr>
                         <tr><td>users/template</td><td><a href="#users_template">Retrieve User Details Template</a></td></tr>
+                        <tr class="alt"><td>audit/searchtemplate</td><td><a href="#audit_searchtemplate">Retrieve Audit Search Data</a></td></tr>
                     </table>
                 </div>
             </div>
@@ -3319,6 +3320,7 @@ ALL_FUNCTIONS_READ: "true"
             <tr><td>offices/template</td><td><a href="#offices_template">Retrieve Office Details Template</a></td></tr>
             <tr class="alt"><td>loanproducts/template</td><td><a href="#loanproducts_template">Retrieve Loan Product Details Template</a></td></tr>
             <tr><td>users/template</td><td><a href="#users_template">Retrieve User Details Template</a></td></tr>
+            <tr class="alt"><td>audit/searchtemplate</td><td><a href="#audit_searchtemplate">Retrieve Audit Search Data</a></td></tr>
         </table>
     </div>
 </div>
